rdbms-service wasm component

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,6 +66,7 @@ exclude = [
     "test-components/variant-service",
     "test-components/write-stderr",
     "test-components/write-stdout",
+    "test-components/rdbms-service",
 ]
 
 [workspace.dependencies]
