rdbms-service wasm component

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,6 +56,7 @@ exclude = [
     "test-components/variant-service",
     "test-components/write-stderr",
     "test-components/write-stdout",
+    "test-components/rdbms-service",
 ]
 
 [profile.dev]
