--- a/golem-worker-executor-base/Cargo.toml
+++ b/golem-worker-executor-base/Cargo.toml
@@ -39,6 +39,7 @@ cap-std = { workspace = true }
 cap-time-ext = "3.0.0"                              # keep in sync with wasmtime
 chrono = { workspace = true }
 dashmap = { workspace = true }
+deadpool-postgres = { workspace = true }
 evicting_cache_map = "0.4.0"
 figment = { workspace = true }
 flume = "0.11.0"
@@ -77,6 +78,7 @@ thiserror = { workspace = true }
 tokio = { workspace = true }
 tokio-rustls = { workspace = true }
 tokio-stream = { workspace = true }
+tokio-postgres = { workspace = true, features = ["with-chrono-0_4", "with-uuid-1"] }
 tonic = { workspace = true }
 tonic-health = { workspace = true }
 tonic-reflection = { workspace = true }
