--- a/Cargo.toml
+++ b/Cargo.toml
@@ -183,6 +183,7 @@ testcontainers-modules = { version = "0.11.4", features = [
     "postgres",
     "redis",
     "minio",
+    "mysql"
 ] }
 test-r = { version = "1.2.0", default-features = true }
 thiserror = "2.0.6"
