--- a/golem-test-framework/Cargo.toml
+++ b/golem-test-framework/Cargo.toml
@@ -40,6 +40,7 @@ redis = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 serde_yaml = { workspace = true }
+sqlx = { workspace = true }
 testcontainers = { workspace = true }
 testcontainers-modules = { workspace = true }
 tokio = { workspace = true }
