RdbmsPoolKey for identification, DockerPostgresRdbs, DockerMysqlRdbs, tests with docker

--- a/golem-worker-executor-base/Cargo.toml
+++ b/golem-worker-executor-base/Cargo.toml
@@ -93,6 +93,7 @@ wasmtime-wasi-http = { workspace = true }
 windows-sys = "0.59.0"
 zstd = "0.13"
 sqlx = { workspace = true }
+regex = { workspace = true }
 
 [dev-dependencies]
 golem-test-framework = { path = "../golem-test-framework", version = "0.0.0" }
