rdbms config, tests

--- a/golem-worker-executor/config/worker-executor.sample.env
+++ b/golem-worker-executor/config/worker-executor.sample.env
@@ -75,6 +75,10 @@ GOLEM__PLUGIN_SERVICE__CONFIG__RETRIES__MULTIPLIER=3.0
 GOLEM__PUBLIC_WORKER_API__ACCESS_TOKEN="2a354594-7a63-4091-a46b-cc58d379f677"
 GOLEM__PUBLIC_WORKER_API__HOST="localhost"
 GOLEM__PUBLIC_WORKER_API__PORT=9007
+GOLEM__RDBMS__POOL__EVICTION_PERIOD="2m"
+GOLEM__RDBMS__POOL__EVICTION_TTL="10m"
+GOLEM__RDBMS__POOL__MAX_CONNECTIONS=20
+GOLEM__RDBMS__QUERY__QUERY_BATCH=50
 GOLEM__RETRY__MAX_ATTEMPTS=3
 GOLEM__RETRY__MAX_DELAY="1s"
 GOLEM__RETRY__MAX_JITTER_FACTOR=0.15
@@ -206,6 +210,10 @@ GOLEM__PLUGIN_SERVICE__CONFIG__RETRIES__MULTIPLIER=3.0
 GOLEM__PUBLIC_WORKER_API__ACCESS_TOKEN="2a354594-7a63-4091-a46b-cc58d379f677"
 GOLEM__PUBLIC_WORKER_API__HOST="localhost"
 GOLEM__PUBLIC_WORKER_API__PORT=9007
+GOLEM__RDBMS__POOL__EVICTION_PERIOD="2m"
+GOLEM__RDBMS__POOL__EVICTION_TTL="10m"
+GOLEM__RDBMS__POOL__MAX_CONNECTIONS=20
+GOLEM__RDBMS__QUERY__QUERY_BATCH=50
 GOLEM__RETRY__MAX_ATTEMPTS=3
 GOLEM__RETRY__MAX_DELAY="1s"
 GOLEM__RETRY__MAX_JITTER_FACTOR=0.15
@@ -303,6 +311,10 @@ GOLEM__PLUGIN_SERVICE__CONFIG__RETRIES__MULTIPLIER=3.0
 GOLEM__PUBLIC_WORKER_API__ACCESS_TOKEN="2a354594-7a63-4091-a46b-cc58d379f677"
 GOLEM__PUBLIC_WORKER_API__HOST="localhost"
 GOLEM__PUBLIC_WORKER_API__PORT=9007
+GOLEM__RDBMS__POOL__EVICTION_PERIOD="2m"
+GOLEM__RDBMS__POOL__EVICTION_TTL="10m"
+GOLEM__RDBMS__POOL__MAX_CONNECTIONS=20
+GOLEM__RDBMS__QUERY__QUERY_BATCH=50
 GOLEM__RETRY__MAX_ATTEMPTS=3
 GOLEM__RETRY__MAX_DELAY="1s"
 GOLEM__RETRY__MAX_JITTER_FACTOR=0.15
