--- a/golem-worker-executor/config/worker-executor.toml
+++ b/golem-worker-executor/config/worker-executor.toml
@@ -113,6 +113,14 @@ access_token = "2a354594-7a63-4091-a46b-cc58d379f677"
 host = "localhost"
 port = 9007
 
+[rdbms.pool]
+eviction_period = "2m"
+eviction_ttl = "10m"
+max_connections = 20
+
+[rdbms.query]
+query_batch = 50
+
 [retry]
 max_attempts = 3
 max_delay = "1s"
@@ -300,6 +308,14 @@ without_time = false
 # host = "localhost"
 # port = 9007
 # 
+# [rdbms.pool]
+# eviction_period = "2m"
+# eviction_ttl = "10m"
+# max_connections = 20
+# 
+# [rdbms.query]
+# query_batch = 50
+# 
 # [retry]
 # max_attempts = 3
 # max_delay = "1s"
@@ -442,6 +458,14 @@ without_time = false
 # access_token = "2a354594-7a63-4091-a46b-cc58d379f677"
 # host = "localhost"
 # port = 9007
+# 
+# [rdbms.pool]
+# eviction_period = "2m"
+# eviction_ttl = "10m"
+# max_connections = 20
+# 
+# [rdbms.query]
+# query_batch = 50
 # 
 # [retry]
 # max_attempts = 3
