custom db types per rdbms - wip

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -173,6 +173,7 @@ sqlx = { version = "0.8", features = [
     "chrono",
     "json",
     "bigdecimal",
+    "mac_address",
     "bit-vec",
     "ipnetwork"
 ] }
